# skole

dat103/oblig1/: dat103-scheduler.tar
dat103/oblig1/dat103-scheduler/: sim-example-fileview.sh
dat103/studentGrading/: oblig1
dat103/studentGrading/oblig1Group135/: FCFSScheduler.java  SimulationTest.java  notes.txt
dat103/studentGrading/oblig1Group21/: FCFSScheduler.java  SimulationTest.java  oblig1-gruppe21.tar  sim-example-fileview.sh
dat103/studentGrading/oblig1Group22/: oblig1_group22.tar
dat103/studentGrading/oblig1Group23/: notes.txt  oblig1-group23.tar
dat103/studentGrading/oblig1Group24/: notes.txt
dat103/studentGrading/oblig1Group27/: ._FCFSScheduler.java  SimulationTest.java  notes.txt  oblig1-group27.tar
dat103/studentGrading/oblig1Group28/: notes.txt  oblig1-group28 (2).tar
dat103/studentGrading/oblig1Group29/: notes.txt  oblig1-group29.tar
dat103/studentGrading/oblig1Group30/: oblig1-group30.tar
dat103/studentGrading/oblig1Group42/: notes.txt  oblig1.tar
dat103/studentGrading/oblig1Group56/: oblig1-group56.tar
dat103/studentGrading/oblig1Group60/: oblig1-group60.tar
dat103/studentGrading/oblig1Group61/: FCFSScheduler.java  SimulationTest.java  (+1 more)
dat103/studentGrading/oblig2/testerdir/: DAT103-H23-sanityChecks.cabal  commands.txt  hello  hello.asm
dat103/studentGrading/oblig2/testerdir/lib/: GradingRecord.hs
dat154/ConsoleApplication1/: ConsoleApplication1.sln
dat191/: timelisteBachelorOppgave
inf122/adventOfCode/: 1.hs  2.hs  3(v2).hs  3.hs  4.hs  5.hs  6.hs  7.hs  8.hs
inf122/codingame/: temperatures.hs
inf122/eksamensoving/: eksamen2017host.hs  eksamen2017vaar.hs  eksamen2019.hs  eksamen2022host.hs
inf122/forelesning/: forelesning3.hs  forelesning4.hs  forelesning5.hs  forelesning6.hs  forelesning7.hs  forelesning8.hs  forelesning9.hs  sisteForelesning.hs
inf122/krasjkurs/: file1.hs
inf122/obliger/: Oblig0.hs  Oblig1.hs  oblig2020.hs  sheet-1.txt  sheet-4.txt  sheet-8.txt
inf122/ukesoppgaver/: Week36Exercise0.hs  Week36Exercise1.hs  Week36Exercise2.hs  Week37Exercise0.hs  Week37Exercise1.hs  Week37Exercise2.hs  Week38Exercise0.hs  Week38Exercise1.hs  Week38Exercise2.hs  Week40Exercise0.hs  Week40Exercise1.hs  Week40Exercise2.hs  Week41Exercise0.hs  Week41Exercise1.hs  Week41Exercise2.hs  Week42Exercise0.hs  Week42Exercise1.hs  Week42Exercise2.hs  Week43Exercise0.hs  Week43Exercise1.hs  Week43Exercise2.hs
(+358 files in other folders)
